<?xml version="1.0"?>

<package format="2">

  <name>trlo</name>
  <version>1.0.0</version>
  <description>TRLO: Efficient LiDAR Odometry with 3D Objects Traking and Removal</description>

  <maintainer email="jiayanpeng@sia.cn">Yanpeng Jia</maintainer>

  <author>Yanpeng Jia</author>

  <license>UCAS</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>

</package>